--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,3 +1,4 @@
+
 .glass-bg {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
@@ -5,3 +6,23 @@
     border: 1px solid rgba(255, 255, 255, 0.2);
   }
   
+
+  #va-nav {
+
+    .logo {
+      font-family: "Poiret One", sans-serif;
+      font-size: var(--font-xl);
+      font-weight: 500;
+      color: var(--white);
+    }
+  
+    .nav-btn {
+      font-family: "Geist", sans-serif;
+      font-size: var(--font-md);
+      color: var(--white);
+    }
+  
+    ol {
+      padding: 0.8rem 2rem;
+    }
+  }
