--- a/global.css
+++ b/global.css
@@ -46,3 +46,26 @@
   background-image: url(src/assets/backgrounds/background-land2.png);
   background-position: center;
 }
+
+/* Botão Voltar ao Topo */
+#btnTop{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 999;
+  background-color: var(--color-dark-green);
+  color: rgb(255, 0, 0);
+  border: none;
+  padding: 12px 16px;
+  font-size: 1.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  display: none;
+  transition: all 0.3s ease;
+}
+
+#btnTop:hover{
+  background-color: var(--color-brown);
+  transform: scale(1.1);
+}
